fix: Hide timer behind settings

--- a/src/components/Settings/Settings.module.scss
+++ b/src/components/Settings/Settings.module.scss
@@ -9,7 +9,7 @@ $accent: #ffd60a;
 
 .block {
   position: absolute;
-  background-color: inherit;
+  background-color: $main;
   top: 0;
   right: 0;
   bottom: 0;
